--- a/JS4/CSS/exercises/one.html
+++ b/JS4/CSS/exercises/one.html
@@ -1,102 +1,98 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-		<style>
-.container {
-	margin: 0 auto;
-	position: relative;
-	width: 400px;
-	border: 1px solid blue;
-	text-align: center;
-}
+    <style>
+      h1 {
+        margin: 10px;
+      }
 
-input {
-	width: 90%;
-}
+      input {
+        width: 90%;
+      }
 
-.right {
-	float: right;
-	right: 5px;
-}
+      .right {
+        float: right;
+      }
 
-.center {
-	text-align: center;
-	margin: 0 auto;
-}
+      .left {
+        float: left;
+      }
 
-.left {
-	float: left;
-}
+      .container {
+        width: 400px;
+        margin: 0 auto;
+        border: 1px solid blue;
+      }
 
-.todo {
-	border: 1px solid black;
-	height: 50px;
-	background: lightgrey;
-	border-spacing: 5px;
+      .todo {
+        height: 30px;
+        margin-top: 10px;
+        background: lightgrey;
+        position: inline-block;
+				padding: 10px 10px 1px 10px;
+      }
+    </style>
 
-}
-		</style>
     <title>one.html</title>
   </head>
   <body>
 
-		<div class="container">
-      <h1>TODO LIST EXAMPLE</h1>
-			<input class="type" type="text" />
-			<br>
-			<br>
+    <div class="container">
+      <h1 class="title left">TODO LIST EXAMPLE</h1>
+      <input />
 
-			<div class="todo six">
-				<p class="left">JS 6</p>
-				<button class="right">Delete</button>
-				<button class="right">Edit</button>
-			</div>
+      <div class="todo">
+        <div class="left">JS6</div>
+        <button class="right">Delete</button>
+        <button class="right">Edit</button>
+      </div>
 
-			<div class="todo five">
-				<p class="left">JS 5</p>
-				<button class="right">Delete</button>
-				<button class="right">Edit</button>
-			</div>
+      <div class="todo">
+        <div class="left">JS5</div>
+        <button class="right">Delete</button>
+        <button class="right">Edit</button>
+      </div>
 
-			<div class="todo four">
-				<p class="left"><strike>JS 4</strike></p>
-				<p class="center">12/6/19</p>
-				<button class="right">Delete</button>
-				<button class="right">Edit</button>
-			</div>
+      <div class="todo">
+        <div class="left"><strike>JS4</strike></div>
+        <button class="right">Delete</button>
+        <button class="right">Edit</button>
+        <div class="right">12/6/19</div>
+      </div>
 
-			<div class="todo three">
-				<p class="left"><strike>JS 3</strike></p>
-				<p class="center">12/6/19</p>
-				<button class="right">Delete</button>
-				<button class="right">Edit</button>
-			</div>
+      <div class="todo">
+        <div class="left"><strike>JS3</strike></div>
+        <button class="right">Delete</button>
+        <button class="right">Edit</button>
+        <div class="right">11/7/19</div>
+      </div>
 
-			<div class="todo two">
-				<p class="left"><strike>JS 2</strike></p>
-				<p class="center">12/6/19</p>
-				<button class="right">Delete</button>
-				<button class="right">Edit</button>
-			</div>
+      <div class="todo">
+        <div class="left"><strike>JS2</strike></div>
+        <button class="right">Delete</button>
+        <button class="right">Edit</button>
+        <div class="right">10/8/19</div>
+      </div>
 
-			<div class="todo one">
-				<p class="left"><strike>JS 1</strike></p>
-				<p class="center">12/6/19</p>
-				<button class="right">Delete</button>
-				<button class="right">Edit</button>
-			</div>
+      <div class="todo">
+        <div class="left"><strike>JS1</strike></div>
+        <button class="right">Delete</button>
+        <button class="right">Edit</button>
+        <div class="right">9/9/19</div>
+      </div>
 
-			<div class="todo zero">
-				<p class="left"><strike>JS 0</strike></p>
-				<p class="center">12/6/19</p>
-				<button class="right">Delete</button>
-				<button class="right">Edit</button>
-			</div>
-			
-		</div>
-
+      <div class="todo">
+				<div class="left"><strike>JS0</strike></div> 
+        <button class="right">Delete</button>
+        <button class="right">Edit</button>
+				<div class="right">8/10/19</div>
+      </div>
+    </div>
   </body>
 </html>
