--- a/JS4/MediaEle/exercise/five.html
+++ b/JS4/MediaEle/exercise/five.html
@@ -25,8 +25,7 @@
 
       type.addEventListener('keyup', e => {
         if (e.key === 'Enter') {
-          const value = type.value;
-          const letters = value.split('');
+          const value = type.value; const letters = value.split('');
 
 					(index === colors.length - 1) ? index = 0 : index += 1
 
