--- a/JS5/Overview/exercises/three.html
+++ b/JS5/Overview/exercises/three.html
@@ -158,13 +158,34 @@ const setupSignup = () => {
 		setupLogin()
 	})
 	$submit.addEventListener('click', () => {
-		// signup button
+		fetch('https://js5.c0d3.com/auth/api/users', {
+			method: "POST",
+			credientials: 'include',
+			headers: {
+				'content-type': 'application/json'
+			},
+			body: JSON.stringify({
+				username: $username.value,
+				email: $email.value,
+				name: $name.value,
+				password: btoa($password.value)
+			})
+		})
 	})
 }
 
 const $appContainer = document.querySelector('.app-container')
 const startApp = () => {
-	// start here
+	fetch('https://js5.c0d3.com/auth/api/sessions')
+		.then(res => {
+			return res.json()
+		})
+		.then((body) => {
+			if (body.error) {
+				return setupLogin()
+			}
+		})
+		.catch(err => console.log(err))
 }
 
 startApp()
